# context_type

./: Cargo.toml
src/: bool.rs  boolean.rs  lib.rs
src/tests/: boolean.rs
tests/: boolean_yes_no_test.rs
